  - Italian.yml updated, courtesy of Leonardo_DGS with PR #4451.
  - Don't delete town inside of `Resident#removeTown()`, courtesy of silverwolfg11 with PR #4457.
  - Add Townblock To New Action Events with PR #4455.
  - API: TownyBurnEvent.
    - Allows for Towny, and then Towny's war systems and other plugins to decide if a block can ignite or burn.
  - Fix sticky pistons retracting on the edge of plots.
    - Closes #4456.
  - Add Dragon Fireball Damage handling.
    - Closes #4100.
  - Switch Explosive Fireworks to be handled like PVP damage when it is dealt to players, instead of Explosive Damage.
    - Makes it possible to use them on crossbows in a pvp setting without needing explosions forced on.
0.96.3.8:
  - Update bstats metrics.
  - Fix javadoc.
  - Add getBlock() to TownyBuildEvent, TownyDestroyEvent and TownySwitchEvent.
  - Replace EntityDeathEvent with PlayerDeathEvent in EntityMonitorListener.
  - API: Add PlayerDeathEvent to PlayerKilledPlayerEvent.
  - Tweaks to how players and non-protected mobs are dealt explosion damage.
  - Cleanup Warnings courtesy of docwhomc with PR #4463.
  - Backend Town UUID Implementation, courtesy of silverwolfg11 with PR #4421.
    - Switchs the maps tracking Towns from names to UUIDs.
    - Move new town method to TownyUniverse.
    - Create a InvalidNameException that is a TownyException.
	- Create register / unregister methods for towns.
0.96.3.9:
  - Fix nation neutral messages, courtesy of silverwolfg11 with PR #4468.
    - Closes #4467.
  - Small Clean-up, Sticky pistons cannot move immutable FlagWar blocks (e.g. a flag beacon), courtesy of TheFlagCourier with PR #4469.
  - Expand `/towny universe` output, courtesy of TheFlagCourier with PR #4470.
0.96.4.0:
  - Bump version for Release.
0.96.4.1:
  - es-419.yml updated by EuGNosii with PR #4471.
  - API: Add NationPreTownLeaveEvent.
  - Have FlagWar and the Towny conquering feature use the NationPreTownLeaveEvent. 